--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -1,15 +1,9 @@
 {% extends "base.html" %}
 
 {% block title %}
-            {% if title %}
-                {{ title }}
-            {% else %}
-                Social Network
-            {% endif %}
-        {% endblock %}
-
+    About
+{% endblock %}
 
 {% block content %}
-<h2 align="center">Welcome to this page, dear,{{ user.username }}</h2><br><br>
-<h3 align="center"><i>Here you can read about us</i></h3>
+    About page
 {% endblock %}
