--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,17 +1,44 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
 
-{% block title %}Login{% endblock %}
+{% block title %}Login{% endblock%}
 
 {% block content %}
-<div>
-
-  <form method="POST" action="">
-    {{ form.hidden_tag() }}<br>
-    {{ form.username.label }} {{ form.username(size=20) }}<br>
-    {{ form.password.label }} {{ form.password(size=20) }}<br>
-    {{ form.remmember.label }} {{ form.remmember() }}<br>
-    {{ form.submit.label }} {{ form.submit() }}
-</form>
-
-</div>
+  <div class="container">
+    <div class="row justify-content-center mt-5">
+      <div class="col-lg-6">
+        <div class="card border-0 shadow">
+          <div class="card-body p-5">
+            <h2 class="text-center mb-4">Login</h2>
+            {% if error %}
+              <div class="alert alert-danger">{{ error }}</div>
+            {% endif %}
+            <form method="post" novalidate>
+              {{ form.hidden_tag() }}
+              <div class="form-group">
+                {{ form.username.label(class="form-label") }}
+                {{ form.username(class="form-control") }}
+                {% for error in form.username.errors %}
+                  <div class="alert alert-danger">{{ error }}</div>
+                {% endfor %}
+              </div>
+              <div class="form-group">
+                {{ form.password.label(class="form-label") }}
+                {{ form.password(class="form-control") }}
+                {% for error in form.password.errors %}
+                  <div class="alert alert-danger">{{ error }}</div>
+                {% endfor %}
+              </div>
+              <div class="form-group">
+                {{ form.remember(class="form-check-input") }}
+                {{ form.remember.label(class="form-check-label") }}
+              </div>
+              <div class="form-group">
+                <button type="submit" class="btn btn-primary btn-block">Login</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 {% endblock %}
