--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,14 +1,9 @@
 {% extends "base.html" %}
 
-{% block title %}
-            {% if title %}
-                {{ title }}
-            {% else %}
-                Social Network
-            {% endif %}
-        {% endblock %}
-
-
 {% block content %}
-<h2 align="center">Welcome to index(main) page, dear,{{ user.username }}</h2>
+    <ul>
+    {% for user in users %}
+        <li>{{ user.username }} - {{ user.email }} - {{ user.password }}</li>
+    {% endfor %}
+    </ul>
 {% endblock %}
