--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html lang="">
 <head>
+    {% block head %}
     <title>
         {% block title %}
-            {% if title %}
-            {{ title }}
-            {% else %}
-                Social Network
-            {% endif %}
+        {% if title %}
+        {{ title }}
+        {% else %}
+        Social Network
+        {% endif %}
         {% endblock %}
     </title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link href="{{ url_for('static', filename='main.css') }}" rel="stylesheet">
+    {% endblock %}
 </head>
 <body>
+<link href="{{ url_for('static', filename='main.css') }}" rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
         <a class="navbar-brand" href="{{ url_for('main.index') }}">Social Network</a>
@@ -54,15 +58,15 @@
 
 <div class="container">
     {% with messages = get_flashed_messages(with_categories=true) %}
-      {% if messages %}
-        {% for category, message in messages %}
-          {% if category == "error" %}
-            <div class="alert alert-danger">{{ message }}</div>
-          {% elif category == "success" %}
-            <div class="alert alert-success">{{ message }}</div>
-          {% endif %}
-        {% endfor %}
-      {% endif %}
+    {% if messages %}
+    {% for category, message in messages %}
+    {% if category == "error" %}
+    <div class="alert alert-danger">{{ message }}</div>
+    {% elif category == "success" %}
+    <div class="alert alert-success">{{ message }}</div>
+    {% endif %}
+    {% endfor %}
+    {% endif %}
     {% endwith %}
 
     {% block content %}{% endblock %}
