--- a/app/templates/user/blog.html
+++ b/app/templates/user/blog.html
@@ -10,7 +10,7 @@
             <div class="command_creat">Create Post</div>
             <div class="create_post_title">
                 <div class="title_left">Title
-                    {{ form.title(cols="1", class="form-control", placeholder="Write here", id="inputPassword") }}
+                    {{ form.title(cols="1", class="form-control", placeholder="Write here", id="inputTitle") }}
                     {% for error in form.title.errors %}
                     <div class="alert alert-danger">{{ error }}</div>
                     {% endfor %}
@@ -19,7 +19,7 @@
             <div class="create_content">
                 <div class="title_left">Add content</div>
                 {{ form.content(rows="10", class="form-control", placeholder="Write here",
-                id="exampleFormControlInput1") }}
+                id="inputText") }}
                 {% for error in form.content.errors %}
                 <div class="alert alert-danger">{{ error }}</div>
                 {% endfor %}
